--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist/LagunaHack-Frontend",
-  "framework": "angular"
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
